--- a/app/src/main/res/layout/activity_maps.xml
+++ b/app/src/main/res/layout/activity_maps.xml
@@ -6,9 +6,4 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context="com.rulletrippen.rulletrippen.MapsActivity"
-    map:uiCompass="false"
-    map:uiRotateGestures="true"
-    map:uiScrollGestures="false"
-    map:uiTiltGestures="true"
-    map:uiZoomControls="true"
-    map:uiZoomGestures="true"/>
+    map:uiZoomControls="true" />
