--- a/app/src/main/res/layout/fragment_routes.xml
+++ b/app/src/main/res/layout/fragment_routes.xml
@@ -2,13 +2,13 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@android:color/holo_orange_dark"
-    tools:context="com.rulletrippen.rulletrippen.FirstFragment">
+    android:background="@android:color/holo_blue_dark"
+    tools:context="com.rulletrippen.rulletrippen.fragments.RoutesFragment">
 
     <!-- TODO: Update blank fragment layout -->
     <TextView
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:text="First fragment" />
+        android:text="Routes" />
 
 </FrameLayout>
