--- a/app/src/main/res/layout/fragment_routes.xml
+++ b/app/src/main/res/layout/fragment_routes.xml
@@ -1,14 +1,258 @@
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@android:color/holo_blue_dark"
+    android:background="#FFF"
+    android:layout_gravity="bottom"
+    android:orientation="vertical"
     tools:context="com.rulletrippen.rulletrippen.fragments.RoutesFragment">
 
-    <!-- TODO: Update blank fragment layout -->
-    <TextView
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:text="Routes" />
 
-</FrameLayout>
+    <GridLayout
+        android:id="@+id/GridLayout1"
+        android:layout_width="match_parent"
+        android:layout_height="50dp"
+        android:columnCount="2"
+        android:rowCount="2"
+        android:background="@drawable/route_border"
+        android:orientation="horizontal">
+
+        <TextView
+            android:text="TestRoute"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:id="@+id/name" />
+
+        <TextView
+            android:text="35meter to start"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="end"
+            android:id="@+id/metersToStart" />
+
+        <TextView
+            android:text="Points: 1923"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:id="@+id/points" />
+
+        <TextView
+            android:text="ETA: 35min"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="end"
+            android:id="@+id/eta" />
+    </GridLayout>
+
+    <GridLayout
+        android:id="@+id/GridLayout1"
+        android:layout_width="match_parent"
+        android:layout_height="50dp"
+        android:columnCount="2"
+        android:rowCount="2"
+        android:background="@drawable/route_border"
+        android:orientation="horizontal">
+
+        <TextView
+            android:text="TestRoute"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:id="@+id/name" />
+
+        <TextView
+            android:text="35meter to start"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="end"
+            android:id="@+id/metersToStart" />
+
+        <TextView
+            android:text="Points: 1923"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:id="@+id/points" />
+
+        <TextView
+            android:text="ETA: 35min"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="end"
+            android:id="@+id/eta" />
+    </GridLayout>
+    <GridLayout
+        android:id="@+id/GridLayout1"
+        android:layout_width="match_parent"
+        android:layout_height="50dp"
+        android:columnCount="2"
+        android:rowCount="2"
+        android:background="@drawable/route_border"
+        android:orientation="horizontal">
+
+        <TextView
+            android:text="TestRoute"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:id="@+id/name" />
+
+        <TextView
+            android:text="35meter to start"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="end"
+            android:id="@+id/metersToStart" />
+
+        <TextView
+            android:text="Points: 1923"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:id="@+id/points" />
+
+        <TextView
+            android:text="ETA: 35min"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="end"
+            android:id="@+id/eta" />
+    </GridLayout>
+    <GridLayout
+        android:id="@+id/GridLayout1"
+        android:layout_width="match_parent"
+        android:layout_height="50dp"
+        android:columnCount="2"
+        android:rowCount="2"
+        android:background="@drawable/route_border"
+        android:orientation="horizontal">
+
+        <TextView
+            android:text="TestRoute"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:id="@+id/name" />
+
+        <TextView
+            android:text="35meter to start"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="end"
+            android:id="@+id/metersToStart" />
+
+        <TextView
+            android:text="Points: 1923"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:id="@+id/points" />
+
+        <TextView
+            android:text="ETA: 35min"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="end"
+            android:id="@+id/eta" />
+    </GridLayout>
+    <GridLayout
+        android:id="@+id/GridLayout1"
+        android:layout_width="match_parent"
+        android:layout_height="50dp"
+        android:columnCount="2"
+        android:rowCount="2"
+        android:background="@drawable/route_border"
+        android:orientation="horizontal">
+
+        <TextView
+            android:text="TestRoute"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:id="@+id/name" />
+
+        <TextView
+            android:text="35meter to start"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="end"
+            android:id="@+id/metersToStart" />
+
+        <TextView
+            android:text="Points: 1923"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:id="@+id/points" />
+
+        <TextView
+            android:text="ETA: 35min"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="end"
+            android:id="@+id/eta" />
+    </GridLayout>
+    <GridLayout
+        android:id="@+id/GridLayout1"
+        android:layout_width="match_parent"
+        android:layout_height="50dp"
+        android:columnCount="2"
+        android:rowCount="2"
+        android:background="@drawable/route_border"
+        android:orientation="horizontal">
+
+        <TextView
+            android:text="TestRoute"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:id="@+id/name" />
+
+        <TextView
+            android:text="35meter to start"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="end"
+            android:id="@+id/metersToStart" />
+
+        <TextView
+            android:text="Points: 1923"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:id="@+id/points" />
+
+        <TextView
+            android:text="ETA: 35min"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="end"
+            android:id="@+id/eta" />
+    </GridLayout>
+    <GridLayout
+        android:id="@+id/GridLayout1"
+        android:layout_width="match_parent"
+        android:layout_height="50dp"
+        android:columnCount="2"
+        android:rowCount="2"
+        android:background="@drawable/route_border"
+        android:orientation="horizontal">
+
+        <TextView
+            android:text="TestRoute"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:id="@+id/name" />
+
+        <TextView
+            android:text="35meter to start"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="end"
+            android:id="@+id/metersToStart" />
+
+        <TextView
+            android:text="Points: 1923"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:id="@+id/points" />
+
+        <TextView
+            android:text="ETA: 35min"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="end"
+            android:id="@+id/eta" />
+    </GridLayout>
+
+</LinearLayout>
