--- a/app/src/main/res/layout/fragment_routes.xml
+++ b/app/src/main/res/layout/fragment_routes.xml
@@ -21,218 +21,7 @@
             android:text="TestRoute"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:id="@+id/name" />
-
-        <TextView
-            android:text="35meter to start"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_gravity="end"
-            android:id="@+id/metersToStart" />
-
-        <TextView
-            android:text="Points: 1923"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:id="@+id/points" />
-
-        <TextView
-            android:text="ETA: 35min"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_gravity="end"
-            android:id="@+id/eta" />
-    </GridLayout>
-
-    <GridLayout
-        android:id="@+id/GridLayout1"
-        android:layout_width="match_parent"
-        android:layout_height="50dp"
-        android:columnCount="2"
-        android:rowCount="2"
-        android:background="@drawable/route_border"
-        android:orientation="horizontal">
-
-        <TextView
-            android:text="TestRoute"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:id="@+id/name" />
-
-        <TextView
-            android:text="35meter to start"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_gravity="end"
-            android:id="@+id/metersToStart" />
-
-        <TextView
-            android:text="Points: 1923"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:id="@+id/points" />
-
-        <TextView
-            android:text="ETA: 35min"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_gravity="end"
-            android:id="@+id/eta" />
-    </GridLayout>
-    <GridLayout
-        android:id="@+id/GridLayout1"
-        android:layout_width="match_parent"
-        android:layout_height="50dp"
-        android:columnCount="2"
-        android:rowCount="2"
-        android:background="@drawable/route_border"
-        android:orientation="horizontal">
-
-        <TextView
-            android:text="TestRoute"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:id="@+id/name" />
-
-        <TextView
-            android:text="35meter to start"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_gravity="end"
-            android:id="@+id/metersToStart" />
-
-        <TextView
-            android:text="Points: 1923"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:id="@+id/points" />
-
-        <TextView
-            android:text="ETA: 35min"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_gravity="end"
-            android:id="@+id/eta" />
-    </GridLayout>
-    <GridLayout
-        android:id="@+id/GridLayout1"
-        android:layout_width="match_parent"
-        android:layout_height="50dp"
-        android:columnCount="2"
-        android:rowCount="2"
-        android:background="@drawable/route_border"
-        android:orientation="horizontal">
-
-        <TextView
-            android:text="TestRoute"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:id="@+id/name" />
-
-        <TextView
-            android:text="35meter to start"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_gravity="end"
-            android:id="@+id/metersToStart" />
-
-        <TextView
-            android:text="Points: 1923"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:id="@+id/points" />
-
-        <TextView
-            android:text="ETA: 35min"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_gravity="end"
-            android:id="@+id/eta" />
-    </GridLayout>
-    <GridLayout
-        android:id="@+id/GridLayout1"
-        android:layout_width="match_parent"
-        android:layout_height="50dp"
-        android:columnCount="2"
-        android:rowCount="2"
-        android:background="@drawable/route_border"
-        android:orientation="horizontal">
-
-        <TextView
-            android:text="TestRoute"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:id="@+id/name" />
-
-        <TextView
-            android:text="35meter to start"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_gravity="end"
-            android:id="@+id/metersToStart" />
-
-        <TextView
-            android:text="Points: 1923"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:id="@+id/points" />
-
-        <TextView
-            android:text="ETA: 35min"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_gravity="end"
-            android:id="@+id/eta" />
-    </GridLayout>
-    <GridLayout
-        android:id="@+id/GridLayout1"
-        android:layout_width="match_parent"
-        android:layout_height="50dp"
-        android:columnCount="2"
-        android:rowCount="2"
-        android:background="@drawable/route_border"
-        android:orientation="horizontal">
-
-        <TextView
-            android:text="TestRoute"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:id="@+id/name" />
-
-        <TextView
-            android:text="35meter to start"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_gravity="end"
-            android:id="@+id/metersToStart" />
-
-        <TextView
-            android:text="Points: 1923"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:id="@+id/points" />
-
-        <TextView
-            android:text="ETA: 35min"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_gravity="end"
-            android:id="@+id/eta" />
-    </GridLayout>
-    <GridLayout
-        android:id="@+id/GridLayout1"
-        android:layout_width="match_parent"
-        android:layout_height="50dp"
-        android:columnCount="2"
-        android:rowCount="2"
-        android:background="@drawable/route_border"
-        android:orientation="horizontal">
-
-        <TextView
-            android:text="TestRoute"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:id="@+id/name" />
+            android:id="@+id/testText" />
 
         <TextView
             android:text="35meter to start"
