--- a/app/src/main/res/layout/fragment_routes.xml
+++ b/app/src/main/res/layout/fragment_routes.xml
@@ -21,7 +21,7 @@
             android:text="TestRoute"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:id="@+id/testText" />
+            android:id="@+id/name" />
 
         <TextView
             android:text="35meter to start"
