--- a/app/src/main/res/layout/fragment_routes.xml
+++ b/app/src/main/res/layout/fragment_routes.xml
@@ -5,43 +5,7 @@
     android:background="#FFF"
     android:layout_gravity="bottom"
     android:orientation="vertical"
-    tools:context="com.rulletrippen.rulletrippen.fragments.RoutesFragment">
-
-
-    <GridLayout
-        android:id="@+id/GridLayout1"
-        android:layout_width="match_parent"
-        android:layout_height="50dp"
-        android:columnCount="2"
-        android:rowCount="2"
-        android:background="@drawable/route_border"
-        android:orientation="horizontal">
-
-        <TextView
-            android:text="TestRoute"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:id="@+id/name" />
-
-        <TextView
-            android:text="35meter to start"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_gravity="end"
-            android:id="@+id/metersToStart" />
-
-        <TextView
-            android:text="Points: 1923"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:id="@+id/points" />
-
-        <TextView
-            android:text="ETA: 35min"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_gravity="end"
-            android:id="@+id/eta" />
-    </GridLayout>
+    tools:context="com.rulletrippen.rulletrippen.fragments.RoutesFragment"
+    android:id="@+id/routesLayout">
 
 </LinearLayout>
